# ocha-stratus

./: .gitignore  CONTRIBUTING.md  README.md  explore_geoparquet.ipynb  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
docs/: api.md  conf.py  index.md  installation.md
src/ocha-stratus/: azure_blob.py  database.py
src/ocha_stratus/: __init__.py  azure_blob.py  azure_database.py  cogs.py  database.py
src/ocha_stratus/datasources/: __init__.py  cerf.py  codab.py  emdat.py  worldpop.py
src/ocha_stratus/email/: listmonk.py
tests/: test_database.py
